@@ -1,4 +1,8 @@
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection_base.hxx, src/connection_base.cxx,
+ test/unit/test_prepared_statement:
+ - Unnamed prepared statements require PQprepare().
+ - Bugfix: unnamed prepared statement kept using its first definition.
  include/pqxx/result.hxx:
  - Fix up PQAlloc deletion handling if shared_ptr not available.
  src/connection_base.cxx:
